--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <neo4j.version>3.1.1</neo4j.version>
    </properties>
   <dependencies>
+<dependency>
+    <groupId>org.neo4j.driver</groupId>
+    <artifactId>neo4j-java-driver</artifactId>
+    <version>1.1.1</version>
+</dependency>
       <dependency>
         <groupId>org.neo4j</groupId>
         <artifactId>neo4j</artifactId>
